--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,64 +8,64 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    runs-on: ubuntu-latest
+  # deploy:
+  #   if: ${{ github.event.workflow_run.conclusion == 'success' }}
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - name: Install zip tool
-        uses: montudor/action-zip@v1
+  #     - name: Install zip tool
+  #       uses: montudor/action-zip@v1
 
-      - name: Zip Analytic Model Lambda
-        run: |
-          cd src/analytical-model
-          zip -r ../../analytical-model.zip .
-          cd ../..
+  #     - name: Zip Analytic Model Lambda
+  #       run: |
+  #         cd src/analytical-model
+  #         zip -r ../../analytical-model.zip .
+  #         cd ../..
 
-      - name: Deploy Analytic Model Lambda
-        uses: imehedi/actions-awscli-v2@latest
-        with:
-          args: "lambda update-function-code \
-            --function-name arn:aws:lambda:us-east-1:851725446831:function:nba-analyse-lambda \
-            --zip-file fileb://analytical-model.zip"
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: "us-east-1"
+  #     - name: Deploy Analytic Model Lambda
+  #       uses: imehedi/actions-awscli-v2@latest
+  #       with:
+  #         args: "lambda update-function-code \
+  #           --function-name arn:aws:lambda:us-east-1:851725446831:function:nba-analyse-lambda \
+  #           --zip-file fileb://analytical-model.zip"
+  #       env:
+  #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         AWS_DEFAULT_REGION: "us-east-1"
 
-      - name: Zip Data Collect Lambda
-        run: |
-          cd src/data-collect
-          zip -r ../../data-collect.zip .
-          cd ../..
+  #     - name: Zip Data Collect Lambda
+  #       run: |
+  #         cd src/data-collect
+  #         zip -r ../../data-collect.zip .
+  #         cd ../..
 
-      - name: Deploy Data Collect Lambda
-        uses: imehedi/actions-awscli-v2@latest
-        with:
-          args: "lambda update-function-code \
-            --function-name arn:aws:lambda:us-east-1:851725446831:function:nba-scraper-lambda \
-            --zip-file fileb://data-collect.zip"
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: "us-east-1"
+  #     - name: Deploy Data Collect Lambda
+  #       uses: imehedi/actions-awscli-v2@latest
+  #       with:
+  #         args: "lambda update-function-code \
+  #           --function-name arn:aws:lambda:us-east-1:851725446831:function:nba-scraper-lambda \
+  #           --zip-file fileb://data-collect.zip"
+  #       env:
+  #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         AWS_DEFAULT_REGION: "us-east-1"
 
-      - name: Zip Data Retrieve Lambda
-        run: |
-          cd src/data-retrieve
-          zip -r ../../data-retrieve.zip .
-          cd ../..
+  #     - name: Zip Data Retrieve Lambda
+  #       run: |
+  #         cd src/data-retrieve
+  #         zip -r ../../data-retrieve.zip .
+  #         cd ../..
 
-      - name: Deploy Data Retrieve Lambda
-        uses: imehedi/actions-awscli-v2@latest
-        with:
-          args: "lambda update-function-code \
-            --function-name arn:aws:lambda:us-east-1:851725446831:function:nba-retriever-lambda \
-            --zip-file fileb://data-retrieve.zip"
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: "us-east-1"
+  #     - name: Deploy Data Retrieve Lambda
+  #       uses: imehedi/actions-awscli-v2@latest
+  #       with:
+  #         args: "lambda update-function-code \
+  #           --function-name arn:aws:lambda:us-east-1:851725446831:function:nba-retriever-lambda \
+  #           --zip-file fileb://data-retrieve.zip"
+  #       env:
+  #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         AWS_DEFAULT_REGION: "us-east-1"
