--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
     - name: Run tests
       run: |
         pytest src/analytical-model/analytical-model-v2/test_analytical_model.py
+        pytest src/data-collect/data-collect-v2/test_data_collect.py
         pytest src/data-retrieve/data-retrieve-v2/test_data_retrieve.py
   # test:
   #   runs-on: ubuntu-latest
